[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runit-cli"
version = "0.1.0"
description = "Define and run named commands per project with runit.yaml"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
runit = "runit.cli:cli"

[tool.setuptools.packages.find]
include = ["runit*"]
